# HealthPush

./: .editorconfig  .gitignore  .lefthook.yml  .markdownlint.json  .release-please-manifest.json  .swiftformat  .swiftlint.yml  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md  release-please-config.json  renovate.json
.claude/: settings.json
.claude/agents/: destination-abstraction-reviewer.md  privacy-reviewer.md
.claude/hooks/: xcodegen-regen.sh
.claude/skills/ios-test/: SKILL.md
.claude/skills/new-destination/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  destination_request.yml  feature_request.yml
.github/requirements/: yamllint.txt
.github/workflows/: codeql.yml  commitlint.yml  dependency-review.yml  ha-integration-ci.yml  ios-ci.yml  label-sync.yml  labeler.yml  lint.yml  release-ha.yml  release-ios.yml  release-please.yml  s3-core-ci.yml  scorecard.yml
docs/: adding-a-destination.md  architecture.md  contributing.mdx  dependencies.md  docs.json  index.mdx  privacy-and-open-source.mdx  quickstart.mdx  schema.md  setup-amazon-s3.mdx  setup-home-assistant.mdx  sync-behavior.mdx  versioning.mdx
fastlane/: Appfile  Fastfile  Gymfile  Matchfile
fastlane/metadata/en-US/: description.txt  keywords.txt  name.txt  privacy_url.txt  support_url.txt
integrations/homeassistant/: README.md  pyproject.toml  requirements_dev.in  requirements_dev.txt  requirements_test.in  requirements_test.txt
integrations/homeassistant/custom_components/healthpush/: CHANGELOG.md  __init__.py  config_flow.py  const.py  hacs.json  manifest.json  payloads.py  sensor.py  services.yaml  webhook.py
integrations/homeassistant/custom_components/healthpush/translations/: en.json
integrations/homeassistant/tests/: test_payloads.py
ios/HealthPush/: CHANGELOG.md  project.yml
ios/HealthPush/Resources/: Info.plist
ios/HealthPush/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/HealthPush/Sources/App/: AppState.swift  HealthPushApp.swift
ios/HealthPush/Sources/DesignSystem/: DesignTokens.swift
ios/HealthPush/Sources/Destinations/: DestinationManager.swift  HomeAssistantDestination.swift  HomeAssistantPayloadBuilder.swift  S3Destination.swift  SyncDestination.swift
ios/HealthPush/Sources/Models/: DateHelpers.swift  DestinationConfig.swift  ExportFormat.swift  HealthDataPoint.swift  HealthMetricType.swift  MetricSyncAnchor.swift  QueryWindow.swift  SyncCapabilities.swift  SyncFailure.swift  SyncFrequency.swift  SyncRecord.swift  SyncStartDateOption.swift  TypeSpecificConfig.swift
ios/HealthPush/Sources/Services/: BGTaskScheduling.swift  BackgroundSyncScheduler.swift  HealthDataExporter.swift  HealthKitManager.swift  HealthKitReading.swift  KeychainService.swift  NetworkPathMonitoring.swift  NetworkService.swift  ProtectedDataMonitoring.swift  S3Client.swift  S3Signer.swift  S3SyncService.swift  SyncEngine.swift  URLValidator.swift
ios/HealthPush/Sources/Views/Components/: ActivityHeatmap.swift  AddDestinationSheet.swift  DataPointsSparkline.swift  DestinationCard.swift  MetricRow.swift  NudgeRow.swift  PulseAnimation.swift  SyncStatusCard.swift  TrustStrip.swift
ios/HealthPush/Sources/Views/Screens/: DashboardScreen.swift  DestinationsScreen.swift  HealthMetricsScreen.swift  HomeAssistantSetupScreen.swift  OnboardingScreen.swift  S3SetupScreen.swift  SettingsScreen.swift  SyncHistoryScreen.swift  SyncRecordDetailView.swift
ios/HealthPush/Tests/: AppStateTests.swift  HealthDataExporterTests.swift  HealthDataPointTests.swift  HealthMetricTypeTests.swift  HomeAssistantDestinationTests.swift  HomeAssistantPayloadBuilderTests.swift  ModelTests.swift  NetworkServiceTests.swift  S3ClientTests.swift  S3DestinationIntegrationTests.swift  S3DestinationQueryWindowTests.swift  SyncEngineTests.swift  SyncFrequencyTests.swift
ios/HealthPush/Tests/Fakes/: FakeHealthKitReader.swift
ios/HealthPush/Tests/Helpers/: StubURLProtocol.swift
rulesets/: README.md  main-protection.json
scripts/: check-no-third-party-deps.sh
